# crab-bridge-rs

./: .dockerignore  .env.example  .gitignore  AGENT_SPEC.md  Cargo.toml  Dockerfile  README.md  build-release.sh  crabbridge.docker.toml  crabbridge.example.toml  docker-compose.yml
.cargo/: config.toml
.cursor/rules/: code-review.mdc  crabbridge.mdc  database-update-patterns.mdc
.githooks/: pre-push
.github/: pull_request_template.md
.github/workflows/: build-desktop.yml
crates/crabbridge-cli/: Cargo.toml
crates/crabbridge-cli/src/: cli.rs  cli_opts.rs  codex_config.rs  lib.rs  main.rs  setup.rs
crates/crabbridge-core/: Cargo.toml  build.rs
crates/crabbridge-core/src/: config.rs  lib.rs  provider.rs  runtime.rs  types.rs  version.rs
crates/crabbridge-desktop/: Cargo.toml  tauri.conf.json
crates/crabbridge-desktop/capabilities/: default.json
crates/crabbridge-desktop/permissions/: app-commands.toml
crates/crabbridge-desktop/src/: autostart.rs  bridge.rs  clipboard.rs  codex_config.rs  dock.rs  env_export.rs  health.rs  lib.rs  logs.rs  main.rs  notify.rs  onboarding.rs  prefs.rs  provider_config.rs  secrets.rs  settings.rs  setup.rs  setup_wizard.rs  shell_env.rs  tray.rs
crates/crabbridge-desktop/static/: native-ui.css  provider-config.css  provider-config.js  settings.html  ui-prefs.js  welcome-home.css  welcome.html  welcome.js
crates/crabbridge-server/: Cargo.toml
crates/crabbridge-server/src/: admin.rs  app.rs  cache.rs  handlers.rs  lib.rs  main.rs  opts.rs  serve.rs  server.rs  session.rs  session_sqlite.rs  state.rs  stream.rs  translate.rs  upstream_request.rs
crates/crabbridge-server/tests/: integration.rs
scripts/: build-desktop.sh  docker-check-linux.sh  docker-check-macos.sh  docker-check-windows.ps1  generate-desktop-icons.py  install-githooks.sh  install-linux.sh  install-macos.sh  install-unix.sh  install-windows.ps1  setup-linux.sh  setup-macos.sh  setup-windows.ps1  sync-version-from-git.sh
scripts/lib/: crabridge-cli-common.ps1  crabridge-cli-common.sh
src/: admin.rs  app.rs  cache.rs  cli.rs  cli_opts.rs  codex_config.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  metrics.rs  opts.rs  prompt.rs  provider.rs  runtime.rs  server.rs  session.rs  session_sqlite.rs  setup.rs  state.rs  stream.rs  translate.rs  types.rs  upstream_request.rs
static/: admin.html
tests/: integration.rs
