[workspace]
resolver = "2"
members = [
    "crates/crabbridge-core",
    "crates/crabbridge-cli",
    "crates/crabbridge-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
toml_edit = "0.22"
tracing = "0.1"
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
tower_governor = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
moka = { version = "0.12", features = ["future"] }
bytes = "1"
uuid = { version = "1", features = ["v4"] }
eventsource-stream = "0.2"
async-stream = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
mockito = "1"
http-body-util = "0.1"

crabbridge-core = { path = "crates/crabbridge-core" }
crabbridge-cli = { path = "crates/crabbridge-cli" }
crabbridge-server = { path = "crates/crabbridge-server" }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1
