[package]
name = "crabbridge-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "crabridge-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crabbridge-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true

[dev-dependencies]
uuid.workspace = true