[package]
name = "crabbridge-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "crabridge"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
crabbridge-core.workspace = true
eventsource-stream.workspace = true
futures-util.workspace = true
moka.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util.workspace = true
mockito.workspace = true
